# rollit

./: .gitignore  README.md  com.github.zelikos.rannum.yml  io.github.ellie_commons.rollit.yml  meson.build
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
data/: Application.css  meson.build  rollit.desktop.in  rollit.gresource.xml  rollit.gschema.xml  rollit.metainfo.xml.in
po/: POTFILES  README.md  de.po  fr.po  io.github.ellie_commons.rollit.pot  meson.build
po/extra/: POTFILES  de.po  extra.pot  fr.po  meson.build
src/: Application.vala  MainWindow.vala  meson.build
src/Widgets/: Menu.vala  NumDisplay.vala  RollHistory.vala
src/Widgets/Buttons/: MenuItem.vala  PreviousRoll.vala
